# r-solution-d-quations-diff-rentielles-ordinaires

./: CMakeLists.txt  Equation.cpp  Main.cpp  Problem.cpp  README.md  Timer.cpp  UniformTimeDiscretization.cpp  Variable.cpp  test.cpp
mylib/: Equation.h  ITimeDiscretization.h  Problem.h  Timer.h  UniformTimeDiscretization.h  variable.h
